2011-11-05  Vladimir Serbinenko  <phcoder@gmail.com>

	Support BtrFS embedding.

	* grub-core/fs/btrfs.c (grub_btrfs_embed) [GRUB_UTIL]: New function.
	(grub_btrfs_fs) [GRUB_UTIL]: Set embed.
	* include/grub/fs.h (grub_fs) [GRUB_UTIL]: New field embed.
	* util/grub-setup.c (setup): Use fs embedding if available.
	Add additional sanity check.

2011-11-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Fix condition for config_opt.

2011-11-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Support third redundancy strip on raidz3.

	* grub-core/fs/zfs/zfs.c (recovery): Add Gauss for general case.
	Return error on singularity. All users updated.
	(read_device): Don't stop on 3rd failure on raidz3.

2011-11-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Support case-insensitive ZFS subvolumes.

	* grub-core/fs/zfs/zfs.c (mzap_lookup): New parameter case_insensitive.
	All users updated.
	(zap_hash): Likewise.
	(name_cmp): New function.
	(zap_leaf_array_equal): New parameter case_insensitive.
	All users updated.
	(zap_leaf_lookup): Likewise.
	(fzap_lookup): Likewise.
	(zap_lookup): Likewise.
	(dnode_get_path): New parameter case_insensitive. Retrieve case
	sensitiviness of a volume. All users updated.
	(dnode_get_fullpath): New parameter case_insensitive.
	All users updated.
	(grub_zfs_dir): Set info.case_insensitiveness.

2011-11-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Support second redundancy strip on raidz(2,3).

	* grub-core/fs/zfs/zfs.c (powx): New array.
	(powx_inv): Likewise.
	(poly): New const.
	(xor_out): New function.
	(gf_mul): Likewise.
	(recovery): Likewise.
	(read_device): Use second redundancy strip.

2011-11-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Use a power of generator representation of GF(256) multiplication group
	to save space time and complexity.

	* grub-core/disk/raid6_recover.c (raid6_table1): Removed.
	(raid6_table2): Likewise.
	(powx): New array.
	(powx_inv): Likewise.
	(poly): New const.