@@ -86,6 +86,7 @@ enum zio_compress {
 	ZIO_COMPRESS_GZIP7,
 	ZIO_COMPRESS_GZIP8,
 	ZIO_COMPRESS_GZIP9,
+	ZIO_COMPRESS_ZLE,
 	ZIO_COMPRESS_FUNCTIONS
 };
 
